// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BlogList /> should render correctly - index 1`] = `
<div>
  <div
    class="sc-iAEawV hlvFhc page-containerstyles__StyledPageContainer-sc-19l7k4-0 containerstyles__StyledPageContainer-sc-1117fm5-0 cjeRLX"
    width="default"
  >
    <div
      class="sc-eDWCr esSKbW"
    >
      <div
        class="sc-bqWxrE cRkaeW"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-eDWCr esSKbW"
    >
      <div
        class="sc-bqWxrE cRkaeW"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-eDWCr esSKbW"
    >
      <div
        class="sc-bqWxrE cRkaeW"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-eDWCr esSKbW"
    >
      <div
        class="sc-bqWxrE cRkaeW"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-eDWCr esSKbW"
    >
      <div
        class="sc-bqWxrE cRkaeW"
        style="margin-left: -0px;"
      />
    </div>
  </div>
  <div
    class="sc-cUEOzv faaHwZ"
  >
    <style>
      .js .animated-content__wrapper--hidden {
  opacity: 0.01;
}
    </style>
    <div
      class="sc-eeMvmM dYDvKH animated-content__wrapper--hidden"
    >
      <div
        class="creative-commonssyles__Wrapper-sc-qff226-0 eObJgx"
      >
        <div
          class="creative-commonssyles__Background-sc-qff226-1 gREbZK"
        />
        <div
          class="sc-jrcTuL drIieO creative-commonssyles__Inner-sc-qff226-2 jkifKu"
        >
          <h1
            class="sc-dkrFOg eRKGDm sc-csuSiG gvoVyF"
            id="copyright"
          >
            Copyright
          </h1>
          <span
            class="sc-ksBlkl bLCpBX"
          >
            Most of my photos are licensed under
             
            <a
              aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
              class="sc-iBYQkv jNlLug"
              href="https://creativecommons.org/licenses/by-sa/3.0/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Creative Commons BY-SA 3.0
              <div
                class="sc-ftTHYK dbfjGz"
              >
                <svg
                  class="sc-gKPRtg eSdzmv sc-pyfCe hLCbyO"
                  height="18"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
                  />
                </svg>
              </div>
            </a>
            .
            <br />
            If you are unsure about your right to use them please 
            <a
              class="sc-iBYQkv jNlLug"
              href="/contact"
            >
              contact me
            </a>
            .
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BlogList /> should render correctly authenticated with blogs 1`] = `
<div>
  <div
    class="sc-iAEawV hlvFhc page-containerstyles__StyledPageContainer-sc-19l7k4-0 containerstyles__StyledPageContainer-sc-1117fm5-0 cjeRLX"
    width="default"
  >
    <div
      class="sc-cUEOzv faaHwZ"
    >
      <style>
        .js .animated-content__wrapper--hidden {
  padding-top: 4rem;
  opacity: 0.01;
}
      </style>
      <div
        class="sc-eeMvmM dYDvKH animated-content__wrapper--hidden"
      >
        <div>
          <a
            aria-label="Add a new blog"
            class="sc-dmctIk dyqBmO sc-bYMpWt iiElWj blogs-liststyles__StyledFeatureCard-sc-if7ctk-0 jTIMeS"
            href="/create-blog"
          >
            <div
              class="sc-kgTSHT eWpXqd"
            >
              <div
                class="sc-fLcnxK cUOGbq"
              />
              <div
                class="sc-bBABsx kLHrUJ"
              >
                <div
                  aria-hidden="true"
                  class="sc-kMjNwy cmaPuj"
                >
                  <div
                    class="sc-ilhmMj bSZrPg date container"
                  />
                  <div
                    class="sc-jIRcFI hPSbcn"
                  >
                    <h1
                      class="sc-gswNZR gzqAHo"
                    >
                      Add a new blog
                    </h1>
                  </div>
                </div>
              </div>
            </div>
          </a>
          <a
            aria-label="Blog 1 , NaN Invalid Date"
            class="sc-dmctIk dyqBmO sc-bYMpWt iiElWj blogs-liststyles__StyledBlogCard-sc-if7ctk-1 WAJUB"
            href="/blog/asdfg"
          >
            <div
              class="sc-kgTSHT eWpXqd"
            >
              <div
                class="sc-fLcnxK cUOGbq"
              />
              <div
                class="sc-bBABsx kLHrUJ"
              >
                <div
                  aria-hidden="true"
                  class="sc-kMjNwy cmaPuj"
                >
                  <div
                    class="sc-ilhmMj bSZrPg date container"
                  >
                    <div
                      class="sc-gYbzsP hrmnoD"
                    >
                      <span
                        class="sc-eDvSVe jJIXiK"
                      >
                        NaN Invalid Date
                      </span>
                    </div>
                    <div
                      class="sc-cCjUiG VtqOV"
                    >
                      <span
                        class="sc-eDvSVe jJIXiK"
                      >
                        NaN
                      </span>
                    </div>
                    <div
                      class="sc-cCjUiG VtqOV"
                    >
                      <span
                        class="sc-eDvSVe jJIXiK"
                      >
                        Invalid Date
                      </span>
                    </div>
                  </div>
                  <div
                    class="sc-jIRcFI hPSbcn"
                  >
                    <h1
                      class="sc-gswNZR gzqAHo"
                    >
                      Blog 1 
                    </h1>
                  </div>
                </div>
              </div>
            </div>
          </a>
          <button
            class="sc-fEXmlR dWOLPu blogs-liststyles__StyledButton-sc-if7ctk-2 gQJRQv"
            type="button"
          >
            <span
              class="sc-idXgbr bxMRaL"
            >
              Delete blog
            </span>
          </button>
          <a
            aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
            class="sc-dmctIk dyqBmO sc-bYMpWt iiElWj blogs-liststyles__StyledBlogCard-sc-if7ctk-1 WAJUB"
            href="/blog/zxywvuts"
          >
            <div
              class="sc-kgTSHT eWpXqd"
            >
              <div
                class="sc-fLcnxK cUOGbq"
              />
              <div
                class="sc-bBABsx kLHrUJ"
              >
                <div
                  aria-hidden="true"
                  class="sc-kMjNwy cmaPuj"
                >
                  <div
                    class="sc-ilhmMj bSZrPg date container"
                  >
                    <div
                      class="sc-gYbzsP hrmnoD"
                    >
                      <span
                        class="sc-eDvSVe jJIXiK"
                      >
                        23-30 Dec
                      </span>
                    </div>
                    <div
                      class="sc-cCjUiG VtqOV"
                    >
                      <span
                        class="sc-eDvSVe jJIXiK"
                      >
                        23-30
                      </span>
                    </div>
                    <div
                      class="sc-cCjUiG VtqOV"
                    >
                      <span
                        class="sc-eDvSVe jJIXiK"
                      >
                        Dec
                      </span>
                    </div>
                  </div>
                  <div
                    class="sc-jIRcFI hPSbcn"
                  >
                    <h1
                      class="sc-gswNZR gzqAHo"
                    >
                      St Ives  2018
                    </h1>
                    <div
                      class="sc-jcMfQk csAzyv"
                    >
                      <div
                        class="sc-cabOPr"
                      >
                        <span
                          class="sc-iTFTee feiNJN"
                          type="travel"
                        >
                          Travel
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="sc-hhOBVt iVfeDD"
                  >
                    <div
                      class="sc-iveFHk jnTCMt sc-cjibBx gmRGcz"
                    >
                      <style>
                        
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
                      </style>
                      <div
                        class="sc-cwSeag ixERhw"
                        style="padding-bottom: 100%;"
                      >
                        <div
                          class="sc-lllmON ecbSTG"
                        >
                          <div
                            class="sc-eDWCr kticUa sc-iJnaPW ddgyIw"
                          >
                            <div
                              class="sc-bqWxrE cRkaeW"
                              style="margin-left: -0px;"
                            />
                          </div>
                        </div>
                        <div
                          class="gg-image__img--hide-no-js"
                        >
                          <img
                            alt="card"
                            class="sc-gikAfH czvrvF"
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                          <img
                            alt="card"
                            class="sc-ezOQGI gGKeK"
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                        </div>
                        <div
                          class="gg-image__img--hide-js"
                        >
                          <img
                            alt="card"
                            class="sc-gikAfH kkgkUJ"
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                          <img
                            alt="card"
                            class="sc-ezOQGI jvqVvi"
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </a>
          <button
            class="sc-fEXmlR dWOLPu blogs-liststyles__StyledButton-sc-if7ctk-2 gQJRQv"
            type="button"
          >
            <span
              class="sc-idXgbr bxMRaL"
            >
              Delete blog
            </span>
          </button>
          <a
            aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
            class="sc-dmctIk dyqBmO sc-bYMpWt iiElWj blogs-liststyles__StyledBlogCard-sc-if7ctk-1 WAJUB"
            href="/blog/mndyd8"
          >
            <div
              class="sc-kgTSHT eWpXqd"
            >
              <div
                class="sc-fLcnxK cUOGbq"
              />
              <div
                class="sc-bBABsx kLHrUJ"
              >
                <div
                  aria-hidden="true"
                  class="sc-kMjNwy cmaPuj"
                >
                  <div
                    class="sc-ilhmMj bSZrPg date container"
                  >
                    <div
                      class="sc-gYbzsP hrmnoD"
                    >
                      <span
                        class="sc-eDvSVe jJIXiK"
                      >
                        23-30 Dec
                      </span>
                    </div>
                    <div
                      class="sc-cCjUiG VtqOV"
                    >
                      <span
                        class="sc-eDvSVe jJIXiK"
                      >
                        23-30
                      </span>
                    </div>
                    <div
                      class="sc-cCjUiG VtqOV"
                    >
                      <span
                        class="sc-eDvSVe jJIXiK"
                      >
                        Dec
                      </span>
                    </div>
                  </div>
                  <div
                    class="sc-jIRcFI hPSbcn"
                  >
                    <h1
                      class="sc-gswNZR gzqAHo"
                    >
                      Untitled blog (DELETED)
                    </h1>
                    <div
                      class="sc-jcMfQk csAzyv"
                    >
                      <div
                        class="sc-cabOPr"
                      >
                        <span
                          class="sc-iTFTee feiNJN"
                          type="travel"
                        >
                          Travel
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="sc-hhOBVt iVfeDD"
                  >
                    <div
                      class="sc-iveFHk jnTCMt sc-cjibBx gmRGcz"
                    >
                      <style>
                        
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
                      </style>
                      <div
                        class="sc-cwSeag ixERhw"
                        style="padding-bottom: 100%;"
                      >
                        <div
                          class="sc-lllmON ecbSTG"
                        >
                          <div
                            class="sc-eDWCr kticUa sc-iJnaPW ddgyIw"
                          >
                            <div
                              class="sc-bqWxrE cRkaeW"
                              style="margin-left: -0px;"
                            />
                          </div>
                        </div>
                        <div
                          class="gg-image__img--hide-no-js"
                        >
                          <img
                            alt="card"
                            class="sc-gikAfH czvrvF"
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                          <img
                            alt="card"
                            class="sc-ezOQGI gGKeK"
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                        </div>
                        <div
                          class="gg-image__img--hide-js"
                        >
                          <img
                            alt="card"
                            class="sc-gikAfH kkgkUJ"
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                          <img
                            alt="card"
                            class="sc-ezOQGI jvqVvi"
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </a>
          <button
            class="sc-fEXmlR iSNjgq blogs-liststyles__StyledButton-sc-if7ctk-2 gQJRQv"
            disabled=""
            type="button"
          >
            <span
              class="sc-idXgbr bxMRaL"
            >
              Delete blog
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-cUEOzv faaHwZ"
  >
    <style>
      .js .animated-content__wrapper--hidden {
  opacity: 0.01;
}
    </style>
    <div
      class="sc-eeMvmM dYDvKH animated-content__wrapper--hidden"
    >
      <div
        class="creative-commonssyles__Wrapper-sc-qff226-0 eObJgx"
      >
        <div
          class="creative-commonssyles__Background-sc-qff226-1 gREbZK"
        />
        <div
          class="sc-jrcTuL drIieO creative-commonssyles__Inner-sc-qff226-2 jkifKu"
        >
          <h1
            class="sc-dkrFOg eRKGDm sc-csuSiG gvoVyF"
            id="copyright"
          >
            Copyright
          </h1>
          <span
            class="sc-ksBlkl bLCpBX"
          >
            Most of my photos are licensed under
             
            <a
              aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
              class="sc-iBYQkv jNlLug"
              href="https://creativecommons.org/licenses/by-sa/3.0/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Creative Commons BY-SA 3.0
              <div
                class="sc-ftTHYK dbfjGz"
              >
                <svg
                  class="sc-gKPRtg eSdzmv sc-pyfCe hLCbyO"
                  height="18"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
                  />
                </svg>
              </div>
            </a>
            .
            <br />
            If you are unsure about your right to use them please 
            <a
              class="sc-iBYQkv jNlLug"
              href="/contact"
            >
              contact me
            </a>
            .
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BlogList /> should render correctly with blog load error 1`] = `
<div>
  <div
    class="sc-iAEawV hlvFhc page-containerstyles__StyledPageContainer-sc-19l7k4-0 containerstyles__StyledPageContainer-sc-1117fm5-0 cjeRLX"
    width="default"
  >
    <div
      class="sc-eDWCr esSKbW"
    >
      <div
        class="sc-bqWxrE cRkaeW"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-eDWCr esSKbW"
    >
      <div
        class="sc-bqWxrE cRkaeW"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-eDWCr esSKbW"
    >
      <div
        class="sc-bqWxrE cRkaeW"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-eDWCr esSKbW"
    >
      <div
        class="sc-bqWxrE cRkaeW"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-eDWCr esSKbW"
    >
      <div
        class="sc-bqWxrE cRkaeW"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-jrcTuL drIieO"
    >
      <h1
        class="sc-dkrFOg eRKGDm sc-csuSiG kJUcBp"
        id="this-is-taking-a-while.-maybe-something-isn't-quite-right..."
      >
        This is taking a while. Maybe something isn't quite right...
      </h1>
    </div>
  </div>
  <div
    class="sc-cUEOzv faaHwZ"
  >
    <style>
      .js .animated-content__wrapper--hidden {
  opacity: 0.01;
}
    </style>
    <div
      class="sc-eeMvmM dYDvKH animated-content__wrapper--hidden"
    >
      <div
        class="creative-commonssyles__Wrapper-sc-qff226-0 eObJgx"
      >
        <div
          class="creative-commonssyles__Background-sc-qff226-1 gREbZK"
        />
        <div
          class="sc-jrcTuL drIieO creative-commonssyles__Inner-sc-qff226-2 jkifKu"
        >
          <h1
            class="sc-dkrFOg eRKGDm sc-csuSiG gvoVyF"
            id="copyright"
          >
            Copyright
          </h1>
          <span
            class="sc-ksBlkl bLCpBX"
          >
            Most of my photos are licensed under
             
            <a
              aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
              class="sc-iBYQkv jNlLug"
              href="https://creativecommons.org/licenses/by-sa/3.0/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Creative Commons BY-SA 3.0
              <div
                class="sc-ftTHYK dbfjGz"
              >
                <svg
                  class="sc-gKPRtg eSdzmv sc-pyfCe hLCbyO"
                  height="18"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
                  />
                </svg>
              </div>
            </a>
            .
            <br />
            If you are unsure about your right to use them please 
            <a
              class="sc-iBYQkv jNlLug"
              href="/contact"
            >
              contact me
            </a>
            .
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BlogList /> should render correctly with blogs 1`] = `
<div>
  <div
    class="sc-iAEawV hlvFhc page-containerstyles__StyledPageContainer-sc-19l7k4-0 containerstyles__StyledPageContainer-sc-1117fm5-0 cjeRLX"
    width="default"
  >
    <div
      class="sc-cUEOzv faaHwZ"
    >
      <style>
        .js .animated-content__wrapper--hidden {
  padding-top: 4rem;
  opacity: 0.01;
}
      </style>
      <div
        class="sc-eeMvmM dYDvKH animated-content__wrapper--hidden"
      >
        <div>
          <a
            aria-label="Blog 1 , NaN Invalid Date"
            class="sc-dmctIk dyqBmO sc-bYMpWt iiElWj blogs-liststyles__StyledBlogCard-sc-if7ctk-1 dxPvVZ"
            href="/blog/asdfg"
          >
            <div
              class="sc-kgTSHT eWpXqd"
            >
              <div
                class="sc-fLcnxK cUOGbq"
              />
              <div
                class="sc-bBABsx kLHrUJ"
              >
                <div
                  aria-hidden="true"
                  class="sc-kMjNwy cmaPuj"
                >
                  <div
                    class="sc-ilhmMj bSZrPg date container"
                  >
                    <div
                      class="sc-gYbzsP hrmnoD"
                    >
                      <span
                        class="sc-eDvSVe jJIXiK"
                      >
                        NaN Invalid Date
                      </span>
                    </div>
                    <div
                      class="sc-cCjUiG VtqOV"
                    >
                      <span
                        class="sc-eDvSVe jJIXiK"
                      >
                        NaN
                      </span>
                    </div>
                    <div
                      class="sc-cCjUiG VtqOV"
                    >
                      <span
                        class="sc-eDvSVe jJIXiK"
                      >
                        Invalid Date
                      </span>
                    </div>
                  </div>
                  <div
                    class="sc-jIRcFI hPSbcn"
                  >
                    <h1
                      class="sc-gswNZR gzqAHo"
                    >
                      Blog 1 
                    </h1>
                  </div>
                </div>
              </div>
            </div>
          </a>
          <a
            aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
            class="sc-dmctIk dyqBmO sc-bYMpWt iiElWj blogs-liststyles__StyledBlogCard-sc-if7ctk-1 dxPvVZ"
            href="/blog/zxywvuts"
          >
            <div
              class="sc-kgTSHT eWpXqd"
            >
              <div
                class="sc-fLcnxK cUOGbq"
              />
              <div
                class="sc-bBABsx kLHrUJ"
              >
                <div
                  aria-hidden="true"
                  class="sc-kMjNwy cmaPuj"
                >
                  <div
                    class="sc-ilhmMj bSZrPg date container"
                  >
                    <div
                      class="sc-gYbzsP hrmnoD"
                    >
                      <span
                        class="sc-eDvSVe jJIXiK"
                      >
                        23-30 Dec
                      </span>
                    </div>
                    <div
                      class="sc-cCjUiG VtqOV"
                    >
                      <span
                        class="sc-eDvSVe jJIXiK"
                      >
                        23-30
                      </span>
                    </div>
                    <div
                      class="sc-cCjUiG VtqOV"
                    >
                      <span
                        class="sc-eDvSVe jJIXiK"
                      >
                        Dec
                      </span>
                    </div>
                  </div>
                  <div
                    class="sc-jIRcFI hPSbcn"
                  >
                    <h1
                      class="sc-gswNZR gzqAHo"
                    >
                      St Ives  2018
                    </h1>
                    <div
                      class="sc-jcMfQk csAzyv"
                    >
                      <div
                        class="sc-cabOPr"
                      >
                        <span
                          class="sc-iTFTee feiNJN"
                          type="travel"
                        >
                          Travel
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="sc-hhOBVt iVfeDD"
                  >
                    <div
                      class="sc-iveFHk jnTCMt sc-cjibBx gmRGcz"
                    >
                      <style>
                        
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
                      </style>
                      <div
                        class="sc-cwSeag ixERhw"
                        style="padding-bottom: 100%;"
                      >
                        <div
                          class="sc-lllmON ecbSTG"
                        >
                          <div
                            class="sc-eDWCr kticUa sc-iJnaPW ddgyIw"
                          >
                            <div
                              class="sc-bqWxrE cRkaeW"
                              style="margin-left: -0px;"
                            />
                          </div>
                        </div>
                        <div
                          class="gg-image__img--hide-no-js"
                        >
                          <img
                            alt="card"
                            class="sc-gikAfH czvrvF"
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                          <img
                            alt="card"
                            class="sc-ezOQGI gGKeK"
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                        </div>
                        <div
                          class="gg-image__img--hide-js"
                        >
                          <img
                            alt="card"
                            class="sc-gikAfH kkgkUJ"
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                          <img
                            alt="card"
                            class="sc-ezOQGI jvqVvi"
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </a>
          <a
            aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
            class="sc-dmctIk dyqBmO sc-bYMpWt iiElWj blogs-liststyles__StyledBlogCard-sc-if7ctk-1 dxPvVZ"
            href="/blog/mndyd8"
          >
            <div
              class="sc-kgTSHT eWpXqd"
            >
              <div
                class="sc-fLcnxK cUOGbq"
              />
              <div
                class="sc-bBABsx kLHrUJ"
              >
                <div
                  aria-hidden="true"
                  class="sc-kMjNwy cmaPuj"
                >
                  <div
                    class="sc-ilhmMj bSZrPg date container"
                  >
                    <div
                      class="sc-gYbzsP hrmnoD"
                    >
                      <span
                        class="sc-eDvSVe jJIXiK"
                      >
                        23-30 Dec
                      </span>
                    </div>
                    <div
                      class="sc-cCjUiG VtqOV"
                    >
                      <span
                        class="sc-eDvSVe jJIXiK"
                      >
                        23-30
                      </span>
                    </div>
                    <div
                      class="sc-cCjUiG VtqOV"
                    >
                      <span
                        class="sc-eDvSVe jJIXiK"
                      >
                        Dec
                      </span>
                    </div>
                  </div>
                  <div
                    class="sc-jIRcFI hPSbcn"
                  >
                    <h1
                      class="sc-gswNZR gzqAHo"
                    >
                      Untitled blog (DELETED)
                    </h1>
                    <div
                      class="sc-jcMfQk csAzyv"
                    >
                      <div
                        class="sc-cabOPr"
                      >
                        <span
                          class="sc-iTFTee feiNJN"
                          type="travel"
                        >
                          Travel
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="sc-hhOBVt iVfeDD"
                  >
                    <div
                      class="sc-iveFHk jnTCMt sc-cjibBx gmRGcz"
                    >
                      <style>
                        
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
                      </style>
                      <div
                        class="sc-cwSeag ixERhw"
                        style="padding-bottom: 100%;"
                      >
                        <div
                          class="sc-lllmON ecbSTG"
                        >
                          <div
                            class="sc-eDWCr kticUa sc-iJnaPW ddgyIw"
                          >
                            <div
                              class="sc-bqWxrE cRkaeW"
                              style="margin-left: -0px;"
                            />
                          </div>
                        </div>
                        <div
                          class="gg-image__img--hide-no-js"
                        >
                          <img
                            alt="card"
                            class="sc-gikAfH czvrvF"
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                          <img
                            alt="card"
                            class="sc-ezOQGI gGKeK"
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                        </div>
                        <div
                          class="gg-image__img--hide-js"
                        >
                          <img
                            alt="card"
                            class="sc-gikAfH kkgkUJ"
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                          <img
                            alt="card"
                            class="sc-ezOQGI jvqVvi"
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-cUEOzv faaHwZ"
  >
    <style>
      .js .animated-content__wrapper--hidden {
  opacity: 0.01;
}
    </style>
    <div
      class="sc-eeMvmM dYDvKH animated-content__wrapper--hidden"
    >
      <div
        class="creative-commonssyles__Wrapper-sc-qff226-0 eObJgx"
      >
        <div
          class="creative-commonssyles__Background-sc-qff226-1 gREbZK"
        />
        <div
          class="sc-jrcTuL drIieO creative-commonssyles__Inner-sc-qff226-2 jkifKu"
        >
          <h1
            class="sc-dkrFOg eRKGDm sc-csuSiG gvoVyF"
            id="copyright"
          >
            Copyright
          </h1>
          <span
            class="sc-ksBlkl bLCpBX"
          >
            Most of my photos are licensed under
             
            <a
              aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
              class="sc-iBYQkv jNlLug"
              href="https://creativecommons.org/licenses/by-sa/3.0/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Creative Commons BY-SA 3.0
              <div
                class="sc-ftTHYK dbfjGz"
              >
                <svg
                  class="sc-gKPRtg eSdzmv sc-pyfCe hLCbyO"
                  height="18"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
                  />
                </svg>
              </div>
            </a>
            .
            <br />
            If you are unsure about your right to use them please 
            <a
              class="sc-iBYQkv jNlLug"
              href="/contact"
            >
              contact me
            </a>
            .
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BlogList /> should render correctly with initial state 1`] = `
<div>
  <div
    class="sc-iAEawV hlvFhc page-containerstyles__StyledPageContainer-sc-19l7k4-0 containerstyles__StyledPageContainer-sc-1117fm5-0 cjeRLX"
    width="default"
  >
    <div
      class="sc-eDWCr esSKbW"
    >
      <div
        class="sc-bqWxrE cRkaeW"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-eDWCr esSKbW"
    >
      <div
        class="sc-bqWxrE cRkaeW"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-eDWCr esSKbW"
    >
      <div
        class="sc-bqWxrE cRkaeW"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-eDWCr esSKbW"
    >
      <div
        class="sc-bqWxrE cRkaeW"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-eDWCr esSKbW"
    >
      <div
        class="sc-bqWxrE cRkaeW"
        style="margin-left: -0px;"
      />
    </div>
  </div>
  <div
    class="sc-cUEOzv faaHwZ"
  >
    <style>
      .js .animated-content__wrapper--hidden {
  opacity: 0.01;
}
    </style>
    <div
      class="sc-eeMvmM dYDvKH animated-content__wrapper--hidden"
    >
      <div
        class="creative-commonssyles__Wrapper-sc-qff226-0 eObJgx"
      >
        <div
          class="creative-commonssyles__Background-sc-qff226-1 gREbZK"
        />
        <div
          class="sc-jrcTuL drIieO creative-commonssyles__Inner-sc-qff226-2 jkifKu"
        >
          <h1
            class="sc-dkrFOg eRKGDm sc-csuSiG gvoVyF"
            id="copyright"
          >
            Copyright
          </h1>
          <span
            class="sc-ksBlkl bLCpBX"
          >
            Most of my photos are licensed under
             
            <a
              aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
              class="sc-iBYQkv jNlLug"
              href="https://creativecommons.org/licenses/by-sa/3.0/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Creative Commons BY-SA 3.0
              <div
                class="sc-ftTHYK dbfjGz"
              >
                <svg
                  class="sc-gKPRtg eSdzmv sc-pyfCe hLCbyO"
                  height="18"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
                  />
                </svg>
              </div>
            </a>
            .
            <br />
            If you are unsure about your right to use them please 
            <a
              class="sc-iBYQkv jNlLug"
              href="/contact"
            >
              contact me
            </a>
            .
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BlogList /> should render correctly with ssrBlogs 1`] = `
<div>
  <div
    class="sc-iAEawV hlvFhc page-containerstyles__StyledPageContainer-sc-19l7k4-0 containerstyles__StyledPageContainer-sc-1117fm5-0 cjeRLX"
    width="default"
  >
    <div
      class="sc-cUEOzv faaHwZ"
    >
      <style>
        .js .animated-content__wrapper--hidden {
  padding-top: 4rem;
  opacity: 0.01;
}
      </style>
      <div
        class="sc-eeMvmM dYDvKH animated-content__wrapper--hidden"
      >
        <div>
          <a
            aria-label="Blog 1 , NaN Invalid Date"
            class="sc-dmctIk dyqBmO sc-bYMpWt iiElWj blogs-liststyles__StyledBlogCard-sc-if7ctk-1 dxPvVZ"
            href="/blog/asdfg"
          >
            <div
              class="sc-kgTSHT eWpXqd"
            >
              <div
                class="sc-fLcnxK cUOGbq"
              />
              <div
                class="sc-bBABsx kLHrUJ"
              >
                <div
                  aria-hidden="true"
                  class="sc-kMjNwy cmaPuj"
                >
                  <div
                    class="sc-ilhmMj bSZrPg date container"
                  >
                    <div
                      class="sc-gYbzsP hrmnoD"
                    >
                      <span
                        class="sc-eDvSVe jJIXiK"
                      >
                        NaN Invalid Date
                      </span>
                    </div>
                    <div
                      class="sc-cCjUiG VtqOV"
                    >
                      <span
                        class="sc-eDvSVe jJIXiK"
                      >
                        NaN
                      </span>
                    </div>
                    <div
                      class="sc-cCjUiG VtqOV"
                    >
                      <span
                        class="sc-eDvSVe jJIXiK"
                      >
                        Invalid Date
                      </span>
                    </div>
                  </div>
                  <div
                    class="sc-jIRcFI hPSbcn"
                  >
                    <h1
                      class="sc-gswNZR gzqAHo"
                    >
                      Blog 1 
                    </h1>
                  </div>
                </div>
              </div>
            </div>
          </a>
          <a
            aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
            class="sc-dmctIk dyqBmO sc-bYMpWt iiElWj blogs-liststyles__StyledBlogCard-sc-if7ctk-1 dxPvVZ"
            href="/blog/zxywvuts"
          >
            <div
              class="sc-kgTSHT eWpXqd"
            >
              <div
                class="sc-fLcnxK cUOGbq"
              />
              <div
                class="sc-bBABsx kLHrUJ"
              >
                <div
                  aria-hidden="true"
                  class="sc-kMjNwy cmaPuj"
                >
                  <div
                    class="sc-ilhmMj bSZrPg date container"
                  >
                    <div
                      class="sc-gYbzsP hrmnoD"
                    >
                      <span
                        class="sc-eDvSVe jJIXiK"
                      >
                        23-30 Dec
                      </span>
                    </div>
                    <div
                      class="sc-cCjUiG VtqOV"
                    >
                      <span
                        class="sc-eDvSVe jJIXiK"
                      >
                        23-30
                      </span>
                    </div>
                    <div
                      class="sc-cCjUiG VtqOV"
                    >
                      <span
                        class="sc-eDvSVe jJIXiK"
                      >
                        Dec
                      </span>
                    </div>
                  </div>
                  <div
                    class="sc-jIRcFI hPSbcn"
                  >
                    <h1
                      class="sc-gswNZR gzqAHo"
                    >
                      St Ives  2018
                    </h1>
                    <div
                      class="sc-jcMfQk csAzyv"
                    >
                      <div
                        class="sc-cabOPr"
                      >
                        <span
                          class="sc-iTFTee feiNJN"
                          type="travel"
                        >
                          Travel
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="sc-hhOBVt iVfeDD"
                  >
                    <div
                      class="sc-iveFHk jnTCMt sc-cjibBx gmRGcz"
                    >
                      <style>
                        
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
                      </style>
                      <div
                        class="sc-cwSeag ixERhw"
                        style="padding-bottom: 100%;"
                      >
                        <div
                          class="sc-lllmON ecbSTG"
                        >
                          <div
                            class="sc-eDWCr kticUa sc-iJnaPW ddgyIw"
                          >
                            <div
                              class="sc-bqWxrE cRkaeW"
                              style="margin-left: -0px;"
                            />
                          </div>
                        </div>
                        <div
                          class="gg-image__img--hide-no-js"
                        >
                          <img
                            alt="card"
                            class="sc-gikAfH czvrvF"
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                          <img
                            alt="card"
                            class="sc-ezOQGI gGKeK"
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                        </div>
                        <div
                          class="gg-image__img--hide-js"
                        >
                          <img
                            alt="card"
                            class="sc-gikAfH kkgkUJ"
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                          <img
                            alt="card"
                            class="sc-ezOQGI jvqVvi"
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </a>
          <a
            aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
            class="sc-dmctIk dyqBmO sc-bYMpWt iiElWj blogs-liststyles__StyledBlogCard-sc-if7ctk-1 dxPvVZ"
            href="/blog/mndyd8"
          >
            <div
              class="sc-kgTSHT eWpXqd"
            >
              <div
                class="sc-fLcnxK cUOGbq"
              />
              <div
                class="sc-bBABsx kLHrUJ"
              >
                <div
                  aria-hidden="true"
                  class="sc-kMjNwy cmaPuj"
                >
                  <div
                    class="sc-ilhmMj bSZrPg date container"
                  >
                    <div
                      class="sc-gYbzsP hrmnoD"
                    >
                      <span
                        class="sc-eDvSVe jJIXiK"
                      >
                        23-30 Dec
                      </span>
                    </div>
                    <div
                      class="sc-cCjUiG VtqOV"
                    >
                      <span
                        class="sc-eDvSVe jJIXiK"
                      >
                        23-30
                      </span>
                    </div>
                    <div
                      class="sc-cCjUiG VtqOV"
                    >
                      <span
                        class="sc-eDvSVe jJIXiK"
                      >
                        Dec
                      </span>
                    </div>
                  </div>
                  <div
                    class="sc-jIRcFI hPSbcn"
                  >
                    <h1
                      class="sc-gswNZR gzqAHo"
                    >
                      Untitled blog (DELETED)
                    </h1>
                    <div
                      class="sc-jcMfQk csAzyv"
                    >
                      <div
                        class="sc-cabOPr"
                      >
                        <span
                          class="sc-iTFTee feiNJN"
                          type="travel"
                        >
                          Travel
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="sc-hhOBVt iVfeDD"
                  >
                    <div
                      class="sc-iveFHk jnTCMt sc-cjibBx gmRGcz"
                    >
                      <style>
                        
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
                      </style>
                      <div
                        class="sc-cwSeag ixERhw"
                        style="padding-bottom: 100%;"
                      >
                        <div
                          class="sc-lllmON ecbSTG"
                        >
                          <div
                            class="sc-eDWCr kticUa sc-iJnaPW ddgyIw"
                          >
                            <div
                              class="sc-bqWxrE cRkaeW"
                              style="margin-left: -0px;"
                            />
                          </div>
                        </div>
                        <div
                          class="gg-image__img--hide-no-js"
                        >
                          <img
                            alt="card"
                            class="sc-gikAfH czvrvF"
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                          <img
                            alt="card"
                            class="sc-ezOQGI gGKeK"
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                        </div>
                        <div
                          class="gg-image__img--hide-js"
                        >
                          <img
                            alt="card"
                            class="sc-gikAfH kkgkUJ"
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                          <img
                            alt="card"
                            class="sc-ezOQGI jvqVvi"
                            src="https://i.imgur.com/ppPEuDs.jpg"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-cUEOzv faaHwZ"
  >
    <style>
      .js .animated-content__wrapper--hidden {
  opacity: 0.01;
}
    </style>
    <div
      class="sc-eeMvmM dYDvKH animated-content__wrapper--hidden"
    >
      <div
        class="creative-commonssyles__Wrapper-sc-qff226-0 eObJgx"
      >
        <div
          class="creative-commonssyles__Background-sc-qff226-1 gREbZK"
        />
        <div
          class="sc-jrcTuL drIieO creative-commonssyles__Inner-sc-qff226-2 jkifKu"
        >
          <h1
            class="sc-dkrFOg eRKGDm sc-csuSiG gvoVyF"
            id="copyright"
          >
            Copyright
          </h1>
          <span
            class="sc-ksBlkl bLCpBX"
          >
            Most of my photos are licensed under
             
            <a
              aria-label="Creative Commons BY-SA 3.0 (opens in a new tab)"
              class="sc-iBYQkv jNlLug"
              href="https://creativecommons.org/licenses/by-sa/3.0/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Creative Commons BY-SA 3.0
              <div
                class="sc-ftTHYK dbfjGz"
              >
                <svg
                  class="sc-gKPRtg eSdzmv sc-pyfCe hLCbyO"
                  height="18"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 11.3c.4.4 1 .4 1.4 0L19 6.2V9c0 .6.4 1 1 1s1-.4 1-1V4c0-.6-.4-1-1-1h-5c-.6 0-1 .4-1 1s.4 1 1 1h2.4l-4.9 4.9c-.4.4-.4 1 0 1.4zM19 19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2V7c0-1.1.9-2 2-2h7v2H5v12h12v-7h2"
                  />
                </svg>
              </div>
            </a>
            .
            <br />
            If you are unsure about your right to use them please 
            <a
              class="sc-iBYQkv jNlLug"
              href="/contact"
            >
              contact me
            </a>
            .
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
